[package]
name = "encrypt-file"
version = "0.1.0"
edition = "2024"

[dependencies]
chacha20poly1305 = ">=0.11.0-rc.0, <0.12"  # Symmetric encryption (ChaCha20Poly1305)
rand = "0.8"              # Random number generator for nonce/salt
argon2 = "0.5"            # Password -> key derivation
clap = { version = "4.5", features = ["derive"] }
